<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.canteen.dashboard.home.IHomeViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintSearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/oval_grey_view"
                android:paddingStart="@dimen/dp20"
                android:paddingTop="@dimen/dp8"
                android:paddingEnd="@dimen/dp20"
                android:paddingBottom="@dimen/dp8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintSearchBar">

                <TextView
                    android:id="@+id/txtCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtCategoriesSeeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp20"
                    android:text="@string/see_all"
                    android:textAllCaps="true"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/sp14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCategories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtCategories"
                    tools:itemCount="4"
                    tools:listitem="@layout/list_item_category">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/txtTrending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/featured_masters"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewCategories" />

                <TextView
                    android:id="@+id/txtTrendingSeeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_marginEnd="@dimen/dp20"
                    android:text="@string/see_all"
                    android:textAllCaps="true"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/sp14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewCategories" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTrending"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp4"
                    android:layout_marginTop="@dimen/dp12"
                    android:layout_marginEnd="@dimen/dp5"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtTrending"
                    tools:listitem="@layout/list_item_product_home">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/txtTopRated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/top_rated"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewTrending" />

                <TextView
                    android:id="@+id/txtNewSeeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp20"
                    android:text="@string/see_all"
                    android:textAllCaps="true"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/sp14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewTrending" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTopRatedProducts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp4"
                    android:layout_marginTop="@dimen/dp12"
                    android:layout_marginEnd="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp15"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtTopRated"
                    app:layout_constraintVertical_bias="0"
                    tools:itemCount="4"
                    tools:listitem="@layout/list_item_product_home">

                </androidx.recyclerview.widget.RecyclerView>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="@{viewModel.loading}"
                    tools:visibility="gone" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
